tests/ui/drop/drop_elaboration_with_errors3.stderr
error: couldn't read `$DIR/nonexistent`: No such file or directory (os error 2)
  --> $DIR/drop_elaboration_with_errors3.rs:14:5
   |
LL |     include_str!("nonexistent");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

